--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 {% load staticfiles %}
-
+{% load menu_tags %}
 <!DOCTYPE HTML>
 <!--
 	Strata by HTML5 UP
@@ -21,9 +21,11 @@
 		<!-- Header -->
 			<header id="header">
 				<a href="#" class="image avatar"><img src="{% static 'images/avatar.jpg' %}" alt="" /></a>
-				<h1><strong>I am Strata</strong>, a super simple<br />
+				<h1><strong>{{ config.NAME }}</strong>, a super simple<br />
 				responsive site template freebie<br />
 				crafted by <a href="#">HTML5 UP</a>.</h1>
+
+                {% draw_menu %}
 			</header>
 
 		<!-- Main -->
