--- a/templates/proposal/proposal.html
+++ b/templates/proposal/proposal.html
@@ -1,9 +1,13 @@
 {% extends 'base.html' %}
 {% load i18n %}
+{% load staticfiles %}
+{% load solo_tags %}
 
 {% block title %}
     {% trans 'Предложение' %}
 {% endblock %}
+
+{% get_solo 'config.SiteConfiguration' as site_config %}
 
 {% block content %}
     <h1 style="text-align: center;">{% trans 'Сделать предложение' %}</h1>
@@ -32,30 +36,55 @@
             <input type="submit" value="{% trans 'Отправить' %}" class="special">
         </form>
     </section>
+
+    <!--BEGIN THANK MESSAGE MODAL WINDOW -->
+    <div id="thnx_msg" class="modal fade" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                </div>
+                <div class="modal-body">
+                    {{ site_config.proposal_succes_msg|safe }}
+                </div>
+
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+    <!--END THANK MESSAGE MODAL WINDOW -->
 {% endblock %}
 
 {% block extra_scripts %}
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <script type="text/javascript">
     $(document).ready(function () {
         $(".ajax input[type='submit']").on('click', function (e) {
             e.preventDefault();
+            // get ajax form
             $form = $(this).parent('.ajax');
+
+            // refresh error field
             $form.find('.error_field').removeClass('error_field');
+
+            // get url in form to send request
             var url = $form.attr('action');
+
+            // serialize data at form
             var data = $form.serialize();
             $.ajax({
                 url: url,
                 data : data,
                 method: 'POST',
                 success:function (url) {
-                    alert('Благодарю за вашу заявку, свяжусь с вами в ближайшие время');
-                    // TODO : 'Normal window for thnx'
-                    //$(location).attr("href", url);
-                    $form.find('input, textarea')
-                        .not(':button, :submit, :reset, :hidden')
-                        .val('')
-                        .removeAttr('checked')
-                        .removeAttr('selected');
+
+                    // reset form
+                    $form.trigger('reset');
+                    $form.trigger('reset');
+
+                    $thnx_msg = $('#thnx_msg');
+
+                    // show modal window with thnk message
+                    $thnx_msg.modal('show');
 
                 },
                 error:function (jqXHR, textStatus, exception) {
